Two-grid columns

--- a/css/_features.scss
+++ b/css/_features.scss
@@ -1,11 +1,19 @@
 .features {            
     padding: 20px;
+    justify-content: center;
 
     .feature-grid {
         display: grid;
         grid-template-columns: 1fr;           
         gap: 6vw 10vw;        
         margin: 0 auto;
+
+        @include breakpoint(medium){ 
+            grid-template-columns: repeat(2, 1fr);
+        }
+
+        @include breakpoint(large){       
+            gap: 7vw 7vw;
         }
     }
 
@@ -36,3 +44,4 @@
             font-size: 1rem;
         }
     }
+}
