--- a/css/style.css
+++ b/css/style.css
@@ -47,26 +47,77 @@ section {
   color: #181f2a;
 }
 
+button, .button {
+  border: none;
+  background: -webkit-gradient(linear, left top, right top, from(#64e1d9), to(#329ecc));
+  background: linear-gradient(to right, #64e1d9, #329ecc);
+  font-size: 0.875rem;
+  font-weight: 700;
+  margin-left: 1rem;
+  padding: 15px 20px;
+  width: 100%;
+  text-align: center;
+  border-radius: 30px;
+  cursor: pointer;
+}
+
+@media screen and (min-width: 699px) {
+  button, .button {
+    max-width: 200px;
+  }
+}
+
+button:hover, .button:hover {
+  background: -webkit-gradient(linear, left top, right top, from(#329ecc), to(#329ecc));
+  background: linear-gradient(to right, #329ecc, #329ecc);
+}
+
 header {
-  background-color: #181f2a;
+  background-color: #1b2330;
   padding: 20px;
 }
 
 header .container {
-  max-width: 1440px;
-  margin: auto;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: minmax(100px, 1fr) (auto)[3];
+      grid-template-columns: minmax(100px, 1fr) repeat(3, auto);
+  grid-gap: 20px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  color: white;
+}
+
+@media screen and (min-width: 999px) {
+  header .container {
+    grid-gap: 56px;
+  }
 }
 
 header img {
   width: 83px;
 }
 
+@media screen and (min-width: 999px) {
+  header img {
+    width: 185px;
+  }
+}
+
+header .center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 header a {
   font-size: 0.875rem;
+}
+
+@media screen and (min-width: 999px) {
+  header a {
+    font-size: 1rem;
+  }
 }
 
 header a:hover {
@@ -75,6 +126,9 @@ header a:hover {
 
 .features {
   padding: 20px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .features .feature-grid {
@@ -86,11 +140,24 @@ header a:hover {
   margin: 0 auto;
 }
 
-.feature {
+@media screen and (min-width: 699px) {
+  .features .feature-grid {
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (min-width: 999px) {
+  .features .feature-grid {
+    gap: 7vw 7vw;
+  }
+}
+
+.features .feature {
   text-align: center;
 }
 
-.feature-image {
+.features .feature-image {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -104,19 +171,86 @@ header a:hover {
   margin-bottom: 30px;
 }
 
-.feature-image img {
+.features .feature-image img {
   height: 100%;
   width: auto;
 }
 
-.feature-title {
+.features .feature-title {
   font-family: 'Raleway', sans-serif;
   font-size: 1.5rem;
   font-weight: 700;
   margin-bottom: 16px;
 }
 
-.feature-description {
+.features .feature-description {
   font-size: 1rem;
+}
+
+.hero {
+  position: relative;
+  background-color: #1b2330;
+}
+
+.hero .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+}
+
+.hero:after {
+  content: "";
+  position: absolute;
+  z-index: 0;
+  width: 100%;
+  height: 40px;
+  bottom: 0px;
+  background-image: url("/images/bg-curvy-mobile.svg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: bottom center;
+}
+
+@media screen and (min-width: 699px) {
+  .hero:after {
+    background-image: url("/images/bg-curvy-desktop.svg");
+    height: 33vw;
+  }
+}
+
+.hero > * {
+  position: relative;
+  z-index: 1;
+}
+
+.hero img {
+  width: 100%;
+  max-width: 716px;
+}
+
+.hero h1 {
+  padding: 20px;
+  width: 100%;
+  max-width: 678px;
+  font-size: 1.5;
+  margin: 1.1em;
+}
+
+.hero p {
+  max-width: 580px;
+  font-size: 0.95em;
+  padding: 20px;
+}
+
+.hero button {
+  margin-top: 8px;
 }
 /*# sourceMappingURL=style.css.map */
