--- a/css/_container.scss
+++ b/css/_container.scss
@@ -1,6 +1,15 @@
 .container {
     max-width: 1440px;
     margin: 0 auto;  
-    color: hsl(218, 28%, 13%);  
-    //padding: 25px 20px 100px 20px;
+    //color: hsl(218, 28%, 13%);  
+    padding: 25px 20px 100px 20px;
+
+    @include breakpoint(large){
+        padding: 73px 60px 87px 60px;
+    }
+
+    &--small {
+        @extend .container;
+        max-width: 920px;
+    }
 }
