--- a/css/_hero.scss
+++ b/css/_hero.scss
@@ -1,31 +1,30 @@
 .hero {
-
     position: relative;
     background-color: #1b2330;
 
-    .container {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-    }
-
     &:after {
         content: "";
-        position:absolute;
+        position: absolute;
         z-index: 0;
         width: 100%;
-        height: 40px;
+        height: 40vw;
         bottom: 0px;
         background-image: url('/images/bg-curvy-mobile.svg');
         background-size: cover;
-        background-repeat:no-repeat;
+        background-repeat: no-repeat;
         background-position: bottom center;
 
         @include breakpoint(medium){
             background-image: url('/images/bg-curvy-desktop.svg');
             height: 33vw;
         }
+    }
+
+    .container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
     }
 
     > * {
@@ -39,17 +38,15 @@
     }
 
     h1 {
-        padding: 20px;
-        width: 100%;
         max-width: 678px;
-        font-size: 1.5;
-        margin: 1.1em;
+        font-size: 1.5em;
+        line-height: 1.5;
+        margin: 1.1em 0;
     }
 
     p {
-        max-width: 580px;
+        max-width: 585px;   
         font-size: 0.95em;
-        padding: 20px;
     }
 
     button {
