--- a/css/style.css
+++ b/css/style.css
@@ -41,13 +41,23 @@ section {
   background-color: #181f2a;
 }
 
-.container {
+.container, .container--small {
   max-width: 1440px;
   margin: 0 auto;
-  color: #181f2a;
+  padding: 25px 20px 100px 20px;
 }
 
-button, .button {
+@media screen and (min-width: 999px) {
+  .container, .container--small {
+    padding: 73px 60px 87px 60px;
+  }
+}
+
+.container--small {
+  max-width: 920px;
+}
+
+button, .button, button--large, .button--large {
   border: none;
   background: -webkit-gradient(linear, left top, right top, from(#64e1d9), to(#329ecc));
   background: linear-gradient(to right, #64e1d9, #329ecc);
@@ -62,14 +72,24 @@ button, .button {
 }
 
 @media screen and (min-width: 699px) {
-  button, .button {
+  button, .button, button--large, .button--large {
     max-width: 200px;
   }
 }
 
-button:hover, .button:hover {
+button:hover, .button:hover, button--large:hover, .button--large:hover {
   background: -webkit-gradient(linear, left top, right top, from(#329ecc), to(#329ecc));
   background: linear-gradient(to right, #329ecc, #329ecc);
+}
+
+button--large, .button--large {
+  padding: 20px;
+}
+
+@media screen and (min-width: 699px) {
+  button--large, .button--large {
+    max-width: 285px;
+  }
 }
 
 header {
@@ -77,7 +97,7 @@ header {
   padding: 20px;
 }
 
-header .container {
+header .container, header .container--small {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: minmax(100px, 1fr) (auto)[3];
@@ -89,7 +109,7 @@ header .container {
 }
 
 @media screen and (min-width: 999px) {
-  header .container {
+  header .container, header .container--small {
     grid-gap: 56px;
   }
 }
@@ -102,12 +122,6 @@ header img {
   header img {
     width: 185px;
   }
-}
-
-header .center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 header a {
@@ -192,26 +206,12 @@ header a:hover {
   background-color: #1b2330;
 }
 
-.hero .container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  text-align: center;
-}
-
 .hero:after {
   content: "";
   position: absolute;
   z-index: 0;
   width: 100%;
-  height: 40px;
+  height: 40vw;
   bottom: 0px;
   background-image: url("/images/bg-curvy-mobile.svg");
   background-size: cover;
@@ -226,6 +226,20 @@ header a:hover {
   }
 }
 
+.hero .container, .hero .container--small {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+}
+
 .hero > * {
   position: relative;
   z-index: 1;
@@ -237,17 +251,15 @@ header a:hover {
 }
 
 .hero h1 {
-  padding: 20px;
-  width: 100%;
   max-width: 678px;
-  font-size: 1.5;
-  margin: 1.1em;
+  font-size: 1.5em;
+  line-height: 1.5;
+  margin: 1.1em 0;
 }
 
 .hero p {
-  max-width: 580px;
+  max-width: 585px;
   font-size: 0.95em;
-  padding: 20px;
 }
 
 .hero button {
