First step of the challenge is done

--- a/css/_forms.scss
+++ b/css/_forms.scss
@@ -3,7 +3,7 @@ button, .button {
     background : linear-gradient(to right, #64e1d9, #329ecc);
     font-size: 0.875rem;
     font-weight: 700;
-    margin-left: 1rem;
+    //margin-left: 1rem;
     padding: 15px 20px;
     width: 100%;
     text-align: center;
