--- a/css/_global.scss
+++ b/css/_global.scss
@@ -19,7 +19,11 @@ body {
 }
 
 a, p {
-    font-size: 0.875rem;  
+    font-size: 0.875rem; 
+    
+    @include breakpoint(large){
+        font-size: 1rem;
+    }
 }
 
 a {
@@ -27,7 +31,8 @@ a {
 }
 
 h1 {
-    font-family: 'Raleway', sans-serif;    margin-top: 0px;
+    font-family: 'Raleway', sans-serif;
+    margin-top: 0px;
 }
 
 p {    
