--- a/css/_hero.scss
+++ b/css/_hero.scss
@@ -33,23 +33,41 @@
     }
 
     img {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
         width: 100%;
         max-width: 716px;
     }
 
     h1 {
+        text-align: center;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        //margin-left: 25%;
         max-width: 678px;
         font-size: 1.5em;
         line-height: 1.5;
-        margin: 1.1em 0;
+        //margin: 1.1em 0;
     }
 
     p {
+        text-align: center;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
         max-width: 585px;   
         font-size: 0.95em;
+        //margin-left: 25%;
     }
 
     button {
         margin-top: 8px;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+       //margin-left: 45%;
+        
     }
 }
