--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,12 @@ a, p {
   font-size: 0.875rem;
 }
 
+@media screen and (min-width: 999px) {
+  a, p {
+    font-size: 1rem;
+  }
+}
+
 a {
   text-decoration: none;
 }
@@ -63,7 +69,6 @@ button, .button, button--large, .button--large {
   background: linear-gradient(to right, #64e1d9, #329ecc);
   font-size: 0.875rem;
   font-weight: 700;
-  margin-left: 1rem;
   padding: 15px 20px;
   width: 100%;
   text-align: center;
@@ -94,7 +99,6 @@ button--large, .button--large {
 
 header {
   background-color: #1b2330;
-  padding: 20px;
 }
 
 header .container, header .container--small {
@@ -136,6 +140,84 @@ header a {
 
 header a:hover {
   text-decoration: underline;
+}
+
+.hero {
+  position: relative;
+  background-color: #1b2330;
+}
+
+.hero:after {
+  content: "";
+  position: absolute;
+  z-index: 0;
+  width: 100%;
+  height: 40vw;
+  bottom: 0px;
+  background-image: url("/images/bg-curvy-mobile.svg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: bottom center;
+}
+
+@media screen and (min-width: 699px) {
+  .hero:after {
+    background-image: url("/images/bg-curvy-desktop.svg");
+    height: 33vw;
+  }
+}
+
+.hero .container, .hero .container--small {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+}
+
+.hero > * {
+  position: relative;
+  z-index: 1;
+}
+
+.hero img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  max-width: 716px;
+}
+
+.hero h1 {
+  text-align: center;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 678px;
+  font-size: 1.5em;
+  line-height: 1.5;
+}
+
+.hero p {
+  text-align: center;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 585px;
+  font-size: 0.95em;
+}
+
+.hero button {
+  margin-top: 8px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .features {
@@ -199,70 +281,5 @@ header a:hover {
 
 .features .feature-description {
   font-size: 1rem;
-}
-
-.hero {
-  position: relative;
-  background-color: #1b2330;
-}
-
-.hero:after {
-  content: "";
-  position: absolute;
-  z-index: 0;
-  width: 100%;
-  height: 40vw;
-  bottom: 0px;
-  background-image: url("/images/bg-curvy-mobile.svg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: bottom center;
-}
-
-@media screen and (min-width: 699px) {
-  .hero:after {
-    background-image: url("/images/bg-curvy-desktop.svg");
-    height: 33vw;
-  }
-}
-
-.hero .container, .hero .container--small {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  text-align: center;
-}
-
-.hero > * {
-  position: relative;
-  z-index: 1;
-}
-
-.hero img {
-  width: 100%;
-  max-width: 716px;
-}
-
-.hero h1 {
-  max-width: 678px;
-  font-size: 1.5em;
-  line-height: 1.5;
-  margin: 1.1em 0;
-}
-
-.hero p {
-  max-width: 585px;
-  font-size: 0.95em;
-}
-
-.hero button {
-  margin-top: 8px;
 }
 /*# sourceMappingURL=style.css.map */
